--- a/sass/layout/_common.scss
+++ b/sass/layout/_common.scss
@@ -20,7 +20,7 @@ footer {
 	clear: both;
 }
 
-.chamburger {
+.hamburger {
 	display: none;
 }
 
@@ -132,7 +132,7 @@ footer {
 	header#home {
 		nav {
 
-			.chamburger{
+			.hamburger{
 				display: block;
 				float: right;
 				margin-top: 12px;
