added another project

--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -14,6 +14,11 @@
 			padding-bottom: 20px;
 		}
 
+		p {
+			font-size: 18px;
+			line-height: 22px;
+		}
+
 	}
 
 	.wrapper {
@@ -30,7 +35,7 @@
 			margin-left: 10%;
 			padding: 6px;
 			border: 1px solid #CCC;
-			border-radius: 5px;
+			border-radius: 2px;
 		}
 	}
 }
