--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ a {
   text-decoration: none; }
 
 .wrapper {
-  max-width: 1700px;
+  max-width: 1705px;
   margin: 0 auto; }
 
 footer {
@@ -37,24 +37,38 @@ footer {
 .hamburger {
   display: none; }
 
-@media screen and (max-width: 1180px) {
+@media screen and (max-width: 1345px) {
   #skills div.technologies {
     width: 65%; }
     #skills div.technologies img.first-line {
-      margin: 20px;
+      margin: 10px 30px;
       width: 100px;
       height: 130px; }
     #skills div.technologies img.second-line {
-      margin: 20px;
+      margin: 10px 30px;
       width: 90px;
       height: 90px; }
+    #skills div.technologies img.third-line {
+      margin: 10px 30px;
+      width: 70px;
+      height: 130px; }
   #skills div.profile {
     width: 35%; }
     #skills div.profile a {
-      font-size: 150px; } }
-@media screen and (max-width: 820px) {
+      font-size: 150px;
+      margin-top: 40%; }
+
+  #projects.wrapper h2 {
+    font-size: 20px;
+    padding-top: 100px; }
+  #projects.wrapper div.latest {
+    flex-wrap: wrap;
+    justify-content: center; }
+    #projects.wrapper div.latest .project-box {
+      margin: 30px; } }
+@media screen and (max-width: 910px) {
   header div#banner {
-    padding: 80px 40px; }
+    padding: 120px 40px; }
     header div#banner p {
       font-size: 18px; }
     header div#banner p.name {
@@ -62,36 +76,48 @@ footer {
     header div#banner h1 {
       font-size: 44px; }
     header div#banner a {
-      margin: 100px 50px; }
+      margin: 80px 50px; }
 
+  #about div.info {
+    width: 100%;
+    margin: 0 auto; }
+    #about div.info p {
+      font-size: 16px; }
   #about div.wrapper {
-    padding: 0 50px; }
+    flex-direction: column; }
+    #about div.wrapper img {
+      width: 220px;
+      height: 270px;
+      margin: auto; }
 
   #skills div.technologies {
     width: 70%; }
     #skills div.technologies img.first-line {
       margin: 20px;
-      width: 80px;
+      width: 70px;
       height: 100px; }
     #skills div.technologies img.second-line {
       margin: 20px;
       width: 70px;
       height: 70px; }
+    #skills div.technologies img.third-line {
+      margin: 10px 30px;
+      width: 60px;
+      height: 110px; }
   #skills div.profile {
     width: 30%; }
     #skills div.profile h2 {
       margin-top: 63px; }
     #skills div.profile a {
-      font-size: 150px; }
+      margin-top: 70%; }
 
   #projects.wrapper h2 {
-    font-size: 20px;
     padding-top: 100px; }
-  #projects.wrapper div.latest {
-    flex-direction: column;
-    justify-content: center; }
-    #projects.wrapper div.latest .project-box {
-      margin: 30px auto; } }
+  #projects.wrapper div.project-box {
+    height: 200px; }
+    #projects.wrapper div.project-box img {
+      width: 250px;
+      height: 200px; } }
 @media screen and (max-width: 678px) {
   header#home nav .hamburger {
     display: block;
@@ -116,7 +142,7 @@ footer {
     opacity: 1;
     height: 250px; }
   header#home #banner {
-    padding-top: 50px; }
+    padding-top: 100px; }
     header#home #banner p {
       font-size: 14px; }
     header#home #banner p.name {
@@ -124,22 +150,16 @@ footer {
     header#home #banner h1 {
       font-size: 40px; }
     header#home #banner a {
-      font-size: 14px; }
+      font-size: 14px;
+      margin: 80px 50px; }
 
-  #about div.info {
-    width: 100%;
-    margin: 0 auto; }
-    #about div.info h2 {
+  #about div.wrapper {
+    padding: 0 30px; }
+    #about div.wrapper div.info h2 {
       padding-top: 20px;
       font-size: 20px; }
-    #about div.info p {
+    #about div.wrapper div.info p {
       font-size: 14px; }
-  #about div.wrapper {
-    flex-direction: column; }
-    #about div.wrapper img {
-      width: 200px;
-      height: 250px;
-      margin: auto; }
 
   #skills.wrapper {
     display: block;
@@ -164,11 +184,6 @@ footer {
 
   #projects.wrapper h2 {
     padding-top: 20px; }
-  #projects.wrapper div.project-box {
-    height: 200px; }
-    #projects.wrapper div.project-box img {
-      width: 250px;
-      height: 200px; }
 
   #contact.wrapper h2 {
     font-size: 20px;
@@ -232,9 +247,9 @@ header {
       font-weight: bold; }
     header #banner a {
       display: inline-block;
-      margin: 130px;
+      margin: 50px;
       padding: 10px 25px;
-      border-radius: 20px;
+      border-radius: 5px;
       background: linear-gradient(#007AF3, #222);
       font-weight: bold; }
       header #banner a:hover {
@@ -255,6 +270,9 @@ header {
       text-align: center;
       padding-top: 80px;
       padding-bottom: 20px; }
+    #about .info p {
+      font-size: 18px;
+      line-height: 22px; }
   #about .wrapper {
     display: flex;
     -webkit-transform: skewY(-3deg);
@@ -271,7 +289,7 @@ header {
       margin-left: 10%;
       padding: 6px;
       border: 1px solid #CCC;
-      border-radius: 5px; }
+      border-radius: 2px; }
 
 #skills {
   position: relative;
@@ -302,6 +320,8 @@ header {
       margin: 30px 20px; }
     #skills .technologies img.second-line {
       margin: 30px; }
+    #skills .technologies img.third-line {
+      margin: 20px 30px; }
   #skills .profile {
     height: 0;
     border-right: 0px solid transparent;
@@ -330,17 +350,19 @@ header {
         color: #000; }
 
 #projects {
-  text-align: center; }
+  text-align: center;
+  margin: 0 auto; }
   #projects h2 {
     padding-top: 120px; }
   #projects .latest {
     display: flex;
-    justify-content: center; }
+    justify-content: center;
+    flex-wrap: wrap; }
     #projects .latest .project-box {
       margin: 30px;
       padding: 6px;
       border: 1px solid #CCC;
-      border-radius: 5px;
+      border-radius: 2px;
       position: relative;
       height: 300px; }
       #projects .latest .project-box .overlay {
@@ -348,7 +370,7 @@ header {
         top: 0;
         left: 0;
         background-color: rgba(0, 0, 0, 0.7);
-        border-radius: 5px;
+        border-radius: 2px;
         height: 100%;
         width: 100%;
         opacity: 0;
