--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -1,5 +1,6 @@
 #projects {
 	text-align: center;
+	margin: 0 auto;
 
 	h2 {
 	padding-top: 120px;
@@ -9,12 +10,13 @@
 	.latest {
 		display: flex;
 		justify-content: center;
+		flex-wrap: wrap;
 
 		.project-box {
 			margin: 30px;
 			padding: 6px;
 			border: 1px solid #CCC;
-			border-radius: 5px;
+			border-radius: 2px;
 			position: relative;
 			height: 300px;
 			
@@ -23,7 +25,7 @@
 				top: 0;
 				left: 0;
 				background-color: $overlay;
-				border-radius: 5px;
+				border-radius: 2px;
 				height: 100%;
 				width: 100%;
 				opacity: 0;
