--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -12,14 +12,14 @@
 	.contact-way {
 		display: flex;
 		justify-content: center;
-		margin: 100px;
+		margin: 100px auto;
 
 		.icon {
 			width: 207px;
 			margin: 0 30px;
 
 			a {
-				font-size: 80px;
+				font-size: 70px;
 			}
 		}
 	}
