--- a/sass/layout/_head.scss
+++ b/sass/layout/_head.scss
@@ -64,12 +64,13 @@ header {
 			display: inline-block;
 			margin: 50px;
 			padding: 10px 25px;
-			border-radius: 5px;
-			background: linear-gradient($blue, $darkGray);
+			border-radius: 3px;
+			background: transparent;
+			border: 2px solid #FFF;
 			font-weight: bold;
 
 			&:hover {
-				background: linear-gradient(#1B8EFD, $darkGray);
+				background: rgba(255, 255, 255, .2);
 			}
 		}
 	}
