--- a/fontello/css/fontello-codes.css
+++ b/fontello/css/fontello-codes.css
@@ -1,6 +1,6 @@
 
-.icon-mobile:before { content: '\e800'; } /* '' */
+.icon-mobile:before { content: '\e801'; } /* '' */
+.icon-mail:before { content: '\e802'; } /* '' */
 .icon-link-2:before { content: '\e803'; } /* '' */
 .icon-github-circled:before { content: '\f09b'; } /* '' */
-.icon-mail-alt:before { content: '\f0e0'; } /* '' */
-.icon-facebook-squared:before { content: '\f308'; } /* '' */
+.icon-facebook-official:before { content: '\f230'; } /* '' */
