--- a/fontello/css/fontello.css
+++ b/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?75737906');
-  src: url('../font/fontello.eot?75737906#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?75737906') format('woff2'),
-       url('../font/fontello.woff?75737906') format('woff'),
-       url('../font/fontello.ttf?75737906') format('truetype'),
-       url('../font/fontello.svg?75737906#fontello') format('svg');
+  src: url('../font/fontello.eot?63973349');
+  src: url('../font/fontello.eot?63973349#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?63973349') format('woff2'),
+       url('../font/fontello.woff?63973349') format('woff'),
+       url('../font/fontello.ttf?63973349') format('truetype'),
+       url('../font/fontello.svg?63973349#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?75737906#fontello') format('svg');
+    src: url('../font/fontello.svg?63973349#fontello') format('svg');
   }
 }
 */
@@ -55,8 +55,8 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-mobile:before { content: '\e800'; } /* '' */
+.icon-mobile:before { content: '\e801'; } /* '' */
+.icon-mail:before { content: '\e802'; } /* '' */
 .icon-link-2:before { content: '\e803'; } /* '' */
 .icon-github-circled:before { content: '\f09b'; } /* '' */
-.icon-mail-alt:before { content: '\f0e0'; } /* '' */
-.icon-facebook-squared:before { content: '\f308'; } /* '' */
+.icon-facebook-official:before { content: '\f230'; } /* '' */
